--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0b86a36610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f322b5e1190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b86432210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b86432410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f322a35d350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f322a35d550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b86cb7a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b86cb7c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f322abe1c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f322abe1e50&gt;]</pre>
 </div>
 
 </div>
