--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efc68f070d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efecc296910&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efc69264f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efc68c13410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efecb0c03d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efecb0c05d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efc69502ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efc694acd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efecb95dcd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efecb95ded0&gt;]</pre>
 </div>
 
 </div>
