--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efecc296910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc8682fdf50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efecb0c03d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efecb0c05d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc8686d6ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc86839a410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efecb95dcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efecb95ded0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc868c2fc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc868c2fe90&gt;]</pre>
 </div>
 
 </div>
