--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f27328adc10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f35c5a7cd10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2732591250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2732591490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f35c5aad0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f35c5aad2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2732e11bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2732e11e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f35c632ea10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f35c632ec10&gt;]</pre>
 </div>
 
 </div>
