--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2c68afd610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0d9200f710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c694292d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2c694294d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d916e2250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d916e2450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c69664c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2c69664e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d91f7bb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d91f7bd90&gt;]</pre>
 </div>
 
 </div>
