--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5e099a6090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fac949f2890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5e096be2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5e096be4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fac940d0410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fac940d0610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5e0990bb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5e0990bd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fac94955c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fac94955e90&gt;]</pre>
 </div>
 
 </div>
