--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9e1c3b9ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f805c925950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e1c0f71d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9e1c0f7410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f805b76d0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f805ba94310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e1c978ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9e1c978d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f805bd9d110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f805bfeec50&gt;]</pre>
 </div>
 
 </div>
