--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f781c27ce50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f23e4457a50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f781c5da190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f781c5da390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f23e4157c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f23e415a610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f781cb38a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f781cb38c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f23e49efdd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f23e49f6f10&gt;]</pre>
 </div>
 
 </div>
