--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f23e4457a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffbc97d3710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f23e4157c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f23e415a610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffbc97f6210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffbc97f6410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f23e49efdd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f23e49f6f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffbca08fb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffbca08fd90&gt;]</pre>
 </div>
 
 </div>
