--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffbc97d3710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbb2b6f8cd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffbc97f6210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffbc97f6410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb2ba45f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbb2b3f1490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffbca08fb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffbca08fd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb2bcc9110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbb2bc8ad90&gt;]</pre>
 </div>
 
 </div>
