--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f98efe31a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8fce9a0d90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f98efb07210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f98efb07410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8fcec88410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8fcec88610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f98f0387b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f98f0387d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8fcf502cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8fcf502ed0&gt;]</pre>
 </div>
 
 </div>
