--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0d3e88ebd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f03c7f9b950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d3eb7f410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0d3eb7f610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f03c8327250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f03c8327450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d3f3efd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0d3f3eff50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f03c8565bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f03c8565dd0&gt;]</pre>
 </div>
 
 </div>
