--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c23e4abd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f914ddb2590&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c22d49210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c22d49410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f914e435190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f914e435390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c235c9b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c235c9d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f914e6d6cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f914e697bd0&gt;]</pre>
 </div>
 
 </div>
