--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4617a75110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc2e418a9d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f461690a490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f461690a690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc2e3ecc390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc2e3ecc590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46171a4d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46171a4f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc2e4761d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc2e4761f50&gt;]</pre>
 </div>
 
 </div>
