--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f809a1ac110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff4346e1190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8099bb22d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8099bb24d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff434704310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff434704510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f809a426c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f809a426e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff434964c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff434964e10&gt;]</pre>
 </div>
 
 </div>
