--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9807375e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3e606f4bd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9806cf8ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9806ced690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e5f5fcfd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3e5fc10550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9807582a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9807589f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e5febaa90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3e5fe6fe90&gt;]</pre>
 </div>
 
 </div>
