--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdeb3627390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbf8dda3750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdeb25322d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdeb25324d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf8da67490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbf8da67690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdeb2da5c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdeb2da5e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf8e2fed10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbf8e2fef10&gt;]</pre>
 </div>
 
 </div>
