--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2bf9ee7750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f15acbe0710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2bfa25c210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2bfa25c410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f15acb913d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f15acb915d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2bfa497b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2bfa497d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f15acdf4cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f15acdf4ed0&gt;]</pre>
 </div>
 
 </div>
