--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbb85324c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c72334550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb85313250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbb85313450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c7269b3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9c7269b5d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb85babb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbb85babd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c728e7c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9c728e7e90&gt;]</pre>
 </div>
 
 </div>
