--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0603de9a90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efc0d596550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0603e10550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0603e10750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc0de9d390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc0de9d590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0604071e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0604071fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc0e0facd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc0e0faed0&gt;]</pre>
 </div>
 
 </div>
