--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efc0d596550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8a811c7fd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efc0de9d390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efc0de9d590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a817e4490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8a817e4690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efc0e0facd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efc0e0faed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a81a41d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8a81a41f90&gt;]</pre>
 </div>
 
 </div>
