--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb79e974650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4ec76d1410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb79e3d8110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb79e3d8310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ec7729310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4ec7729510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb79eca4b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb79ec59cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ec7f9ac90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4ec7f9ae90&gt;]</pre>
 </div>
 
 </div>
